--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
-android/** linguist-vendored
-ios/** linguist-vendored
-linux/** linguist-vendored
-macos/** linguist-vendored
-windows/** linguist-vendored
+*.cpp linguist-vendored
+*.c linguist-vendored
+*.cmake linguist-vendored
+*.h linguist-vendored
+*.html linguist-vendored
+*.swift linguist-vendored
