--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+            flutter-version: '3.10.0' # Replace 'stable' with a specific version
 
       # Install dependencies
       - name: Install dependencies
