--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,5 @@
-# Ignore non-Dart languages
-*.cpp linguist-vendored
-*.c linguist-vendored
-*.cmake linguist-vendored
-*.h linguist-vendored
-*.html linguist-vendored
-*.swift linguist-vendored
-
-# Include Dart
-*.dart linguist-language=Dart
+android/** linguist-vendored
+ios/** linguist-vendored
+linux/** linguist-vendored
+macos/** linguist-vendored
+windows/** linguist-vendored
